<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/dark_cyan"
    tools:context="com.example.rajee.androidservices.PDFDownloadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_margin="5dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf_download_activity"
            android:textSize="@dimen/font_large"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf_desc"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:id="@+id/url_text"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <TableRow android:layout_marginBottom="4dp">
                <TextView
                    android:text="@string/pdf_one_file_location"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/pdf_one"
                    android:layout_marginLeft="5dp"
                    android:layout_height="30dp"
                    android:layout_width="180dp"
                    android:background="@color/white"
                    android:textColor="@color/gray"
                    android:text="@string/pdf_one"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_horizontal"
                    android:padding="4dp"/>
            </TableRow>
            <TableRow android:layout_marginBottom="4dp">
                <TextView
                    android:text="@string/pdf_two_file_location"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/pdf_two"
                    android:layout_marginLeft="5dp"
                    android:layout_height="30dp"
                    android:layout_width="180dp"
                    android:background="@color/white"
                    android:textColor="@color/gray"
                    android:text="@string/pdf_two"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_horizontal"
                    android:padding="4dp"/>
            </TableRow>
            <TableRow android:layout_marginBottom="4dp">
                <TextView
                    android:text="@string/pdf_three_file_location"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/pdf_three"
                    android:layout_marginLeft="5dp"
                    android:layout_height="30dp"
                    android:layout_width="180dp"
                    android:background="@color/white"
                    android:textColor="@color/gray"
                    android:text="@string/pdf_three"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_horizontal"
                    android:padding="4dp"/>
            </TableRow>
            <TableRow android:layout_marginBottom="4dp">
                <TextView
                    android:text="@string/pdf_four_file_location"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/pdf_four"
                    android:layout_marginLeft="5dp"
                    android:layout_height="30dp"
                    android:layout_width="180dp"
                    android:background="@color/white"
                    android:textColor="@color/gray"
                    android:text="@string/pdf_four"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_horizontal"
                    android:padding="4dp"/>
            </TableRow>
            <TableRow android:layout_marginBottom="4dp">
                <TextView
                    android:text="@string/pdf_five_file_location"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/pdf_five"
                    android:layout_marginLeft="5dp"
                    android:layout_height="30dp"
                    android:layout_width="180dp"
                    android:background="@color/white"
                    android:textColor="@color/gray"
                    android:text="@string/pdf_five"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_horizontal"
                    android:padding="4dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/start_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_download"
        android:textColor="@color/black"
        android:textSize="@dimen/font_medium"
        android:background="@color/faint_yellow"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"/>

</LinearLayout>