<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/dark_cyan"
    tools:context="com.example.rajee.androidservices.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_margin="5dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services_app"
            android:textSize="@dimen/font_large"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:id="@+id/url_text"/>
        <Button
            android:id="@+id/pdf_download_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pdf_download_activity"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium"
            android:background="@color/faint_yellow"
            android:layout_gravity="center_horizontal"
            android:layout_margin="40dp"/>
        <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium"
            android:background="@color/faint_yellow"
            android:layout_gravity="center_horizontal"
            android:layout_margin="40dp"/>
    </LinearLayout>

</LinearLayout>